Relation Tipo and Cidade 2

--- a/api/cidades/models/cidades.settings.json
+++ b/api/cidades/models/cidades.settings.json
@@ -15,9 +15,9 @@
       "type": "string",
       "required": true
     },
-    "imovel": {
+    "imoveis": {
       "via": "cidade",
-      "model": "imoveis"
+      "collection": "imoveis"
     }
   }
 }
