--- a/api/tipos/models/tipos.settings.json
+++ b/api/tipos/models/tipos.settings.json
@@ -15,9 +15,9 @@
       "type": "string",
       "required": true
     },
-    "imovel": {
+    "imoveis": {
       "via": "tipo",
-      "model": "imoveis"
+      "collection": "imoveis"
     }
   }
 }
