exerpt and Slider

--- a/api/imoveis/models/imoveis.settings.json
+++ b/api/imoveis/models/imoveis.settings.json
@@ -68,6 +68,10 @@
     "tipo": {
       "model": "tipos",
       "via": "imoveis"
+    },
+    "Resumo": {
+      "type": "string",
+      "maxLength": 120
     }
   }
 }
